	allow uploads only on file border
	up/down speed is in B/s, not b/s.
	client tracing improved:
	  H - not enough bytes for header
	  C - wrong checksum
	  S - wrong seq. number
	  T - truncated
	  R - First resend
	  I - Idle  resend
	client: use random starting seq. number - better for avoiding
	  seq. number clash with another client
	fixed compiler warning on BB_READ4(const char *);

Version 2.8.1b19 - 11 Jan 2004
	sven has added fspget URL command to setup.sh.
	fixed case for mklargefile.py in tests/Makefile.am
	added --enable-debug switch to configure for enabling extra
	  debuging code in client library
	fsp/fifocache.c changed malloc.h to stdlib.h -> allow compile on
	  freebsd
	do not use ${RM} in clients/Makefile.am -> allow compile with bsd make

Version 2.8.1b18 - 25 Nov 24 2003
	This is MINIMUM REQUIRED VERSION for applications which are using
	  javafsp library, only download machine atm. Javafsp library will
	  be released shortly as separate package.
	PROTOCOL updated. Made rules about breaking directory header on
	  packet boundary more clear. Previous text was from fspd code comment
	  and was bad.
	fixed tests/mklargefile.py
	log uploads to wuftpd logfile also
	PROTOCOL file updated. Added required commands section.
	PROTOCOL file updated. Added recommended delay management section.
	default delay in clients adjusted from 1.5 to 1.34 sec as recommended
	  in PROTOCOL
	support for MIN_DELAY, MAX_DELAY and DEFAULT_DELAY in source
	path parsing moved to separate file server/path.c
	new test tool parsecheck for testing server path parser
	reworked parse path: separate error messages for high bit chars,
	  control chars
	MAJOR BUGFIX: path with trailing / or starting / is now parsed correctly
	pathes with dot after slash are now detected at parse level (side
	  effect of prev. fix, fixed security prob)
	tests moved from server/ into tests/ directory
	removed special test case for root directory in path.c -> use more