@@ -80,6 +80,8 @@ AC_CHECK_LIB(efence,EF_Abort)
 fi
 AC_MSG_CHECKING([if enable extra debug code])
 AC_ARG_ENABLE(debug,[Enable client library debuging],AC_DEFINE(DEBUG,1,[Define if you want more debug messages]) AC_MSG_RESULT(YES),AC_MSG_RESULT(NO))
+AC_MSG_CHECKING([if we are building lamer pack])
+AC_ARG_ENABLE(lamerpack,[Build for lamers],AC_DEFINE(LAMERPACK,1,[Define if you want to build for lamer disbled ppl]) AC_MSG_RESULT(YES),AC_MSG_RESULT(NO))
 AC_HEADER_STDC
 AC_CHECK_HEADERS(limits.h sys/syslimits.h errno.h)
 AC_CHECK_HEADERS(string.h memory.h strings.h unistd.h sys/resource.h utime.h)
