@@ -11,11 +11,15 @@
 # 
 port 21
 
+# Server can listen only on particular network interface
+#listenaddress 192.168.1.2
+
 # The 'packetsize' sets maximal data size which will send FSPD in one packet.
 # FSP definition allows up to 1024 bytes of data (default value) and it is a
 # recommended to use this value unless there is a reason to use a smaller one.
-# If your fsp site eats too much bandwidth try smaller value.  !!! If you
-# change this value you must delete all .FSP_CONTENT files !!!
+# If your fsp site eats too much bandwidth try smaller value.  
+# !!! If you change this value you must delete all prebuilded directory
+# listings == .FSP_CONTENT files !!!
 # packetsize 768
 
 # The 'conf' command allows a global file to read local files so that
@@ -34,6 +38,8 @@ homedir_restricted yes
 
 # 'use_access_files' if server should check for special .FSP files
 # in directory and set access rights acording to that.
+# In most installation, yes is right. Use `no` if people can uload
+# files starting with .FSP into fsp server homedir.
 use_access_files yes
 
 # 'permit_passwordless_owners' If server allow directory owners without
@@ -78,7 +84,7 @@ statcache 30
 
 # The 'statcache_timeout' command controls how long statcache entries are
 # valid before directory gets re-examined by stat()
-statcache_timeout 15
+statcache_timeout 20
 
 # 'use_directory_mtime'. If your filesystem changes mtime when directory
 # is updated, set it to YES. If set to NO, directory will be rechecked
@@ -89,7 +95,7 @@ statcache_timeout 15
 # The 'filecache' command controls maximal number of open files by server.
 # After this limit will be reached, server will close last recently used files.
 # This do not prevent any number clients from downloading, but file for each
-# request must be opened first. Setting this lower open/close overhead.
+# request must be opened first. Setting this lowers open/close overhead.
 filecache 30
 
 # The 'dumpfile' command tells the server where to log stats on SIGUSR1
@@ -123,7 +129,7 @@ logfile ../logs/logfile
 log all !readonly
 
 #The 'xferlog' command tells server where to use wuftpd compatible
-#transfer log file.
+#transfer log file. Thos logs currectly do not support partial transfers.
 xferlog ../logs/xferlog
 
 # The 'thruput' command is used to specify the maximum average
